[package]
name = "dsa_library"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name="hash_table"
path="13_hash_table/01_hash_table.rs"

[[bin]]
name="linear_search"
path="02_searching/08_linear_search.rs"

[[bin]]
name="linear_search_recursively"
path="02_searching/09_linear_search_recursively.rs"

[[bin]]
name="binary_search"
path="02_searching/10_binary_search.rs"

